--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@ body {
 :root {
   --color-131921: #131921;
   --color-3b4149: #3b4149;
+  --color-febd69: #febd69;
+  --color-232f3e: #232f3e;
 }
 a {
   text-decoration: none;
@@ -22,7 +24,19 @@ a {
   border-bottom: 1px solid var(--color-3b4149);
 }
 
-.header-upper{
-  background-color:  var(--color-131921);
+.header-upper {
+  background-color: var(--color-131921);
+}
+
+.header-upper .input-group-text {
+  background-color: var(--color-febd69);
+}
+
+.form-control:focus {
+  box-shadow: none;
+}
+
+.header-bottom{
+  background: var(--color-3b4149);
 }
 /* Header Part */
