--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,22 @@
   box-sizing: border-box;
 }
 
+.form-control:focus {
+  box-shadow: none;
+}
+
+.gap-10 {
+  gap: 10px;
+}
+
+.gap-15 {
+  gap: 15px;
+}
+
+.gap-30 {
+  gap: 30px;
+}
+
 body {
   font-family: "Rubik", sans-serif;
 }
@@ -32,11 +48,51 @@ a {
   background-color: var(--color-febd69);
 }
 
-.form-control:focus {
+.header-upper .header-upper-links img {
+  width: 35;
+  height: 35;
+}
+
+.header-bottom {
+  background: var(--color-3b4149);
+}
+
+.header-bottom .menu-links a,
+.header-bottom .dropdown button {
+  font-size: 14px;
+  color: white;
+  line-height: 18px;
+  font-weight: 400;
+  letter-spacing: 0.3;
+}
+
+.header-bottom .dropdown button:focus {
   box-shadow: none;
 }
 
-.header-bottom{
-  background: var(--color-3b4149);
+.header-bottom .dropdown-menu {
+  background-color: var(--color-131921);
+  width: 100%;
+  transform: translate3d(0px, 57px, 0px) !important;
 }
+.header-bottom .dropdown-item {
+  padding: 15px;
+  margin-bottom: 3px;
+  border-bottom: 1px solid var(--color-3b4149);
+}
+.header-bottom .dropdown-item:hover {
+  background-color: transparent;
+  color: var(--color-febd69) !important;
+}
+
 /* Header Part */
+
+/* Footer Part */
+footer {
+  background-color: var(--color-232f3e);
+}
+
+footer:not(:first-child) {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+/* Footer Part */
