--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,19 @@
   gap: 30px;
 }
 
+.button {
+  background-color: var(--color-232f3e);
+  color: white;
+  font-size: 14px;
+  padding: 13px 33px;
+  border-radius: 20px;
+}
+
+.button:hover {
+  background-color: var(--color-febd69);
+  color: var(--color-131921);
+}
+
 body {
   font-family: "Rubik", sans-serif;
 }
@@ -28,6 +41,8 @@ body {
   --color-3b4149: #3b4149;
   --color-febd69: #febd69;
   --color-232f3e: #232f3e;
+  --color-bf4800: #bf4800;
+  --color-f5f5f7: #f5f5f7;
 }
 a {
   text-decoration: none;
@@ -105,8 +120,82 @@ footer .input-group-text {
 /* Footer Part */
 
 /* HOME PAGE */
+/* Home Wrapped 1 */
+.main-banner {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .main-banner-content {
   top: 15%;
   left: 5%;
 }
+
+.main-banner-content h4 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+
+.main-banner-content h5 {
+  font-size: 52px;
+  font-weight: 500;
+  line-height: 64px;
+  letter-spacing: -2px;
+  text-transform: none;
+}
+
+.main-banner-content p {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0.2px;
+  color: var(--color-131921);
+}
+
+.small-banner-content {
+  top: 25%;
+  left: 5%;
+}
+
+.small-banner-content h4 {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+
+.small-banner-content h5 {
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 34px;
+  letter-spacing: -2px;
+  text-transform: none;
+}
+
+.small-banner-content p {
+  font-size: 14px;
+  line-height: 28px;
+  letter-spacing: 0.4px;
+  color: var(--color-131921);
+}
+
+.small-banner {
+  width: 49%;
+}
+/* Home Wrapped 1 */
+
+/* Home Wrapped 2 */
+.home-wrapper-2 {
+  background-color: var(--color-f5f5f7);
+}
+/* Home Wrapped 2 */
+
 /* HOME PAGE */
