--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@ body {
   --color-bf4800: #bf4800;
   --color-f5f5f7: #f5f5f7;
   --color-ededed: #ededed;
+  --color-777777: #777777;
 }
 a {
   text-decoration: none;
@@ -217,8 +218,39 @@ footer .input-group-text {
   width: 60%;
 }
 
-
-
 /* Categories section */
 
 /* HOME PAGE */
+
+/* Blog Card */
+.blog-card {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.blog-card img {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.blog-content {
+  padding: 15px;
+}
+.blog-content p.date {
+  color: var(--color-777777);
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-weight: 400;
+  line-height: 24px;
+}
+.blog-content h5 {
+  font-size: 18px;
+  color: var(--color-131921);
+}
+
+.blog-content p.desc {
+  color: var(--color-777777);
+  line-height: 22px;
+}
+/* Blog Card */
