--- a/src/App.css
+++ b/src/App.css
@@ -315,5 +315,6 @@ footer .input-group-text {
   padding: 10px;
   background-color: white;
   border-radius: 12px;
+  margin: 10px;
 }
 /*Special Product Card */
