--- a/src/App.css
+++ b/src/App.css
@@ -312,7 +312,7 @@ footer .input-group-text {
 
 /*Special Product Card */
 .special-product-card {
-  padding: 10px;
+  padding: 20px 10px;
   background-color: white;
   border-radius: 12px;
   margin: 10px;
