--- a/src/App.css
+++ b/src/App.css
@@ -318,3 +318,33 @@ footer .input-group-text {
   margin: 10px;
 }
 /*Special Product Card */
+
+/* Famous card */
+.famous-card .famous-content {
+  top: 10%;
+  left: 10%;
+}
+
+.famous-content h5 {
+  text-transform: uppercase;
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  margin-bottom: 7px;
+}
+
+.famous-content h6 {
+  font-size: 24px;
+  line-height: 38px;
+  font-weight: 500;
+}
+
+.famous-content p{
+  font-size: 16px;
+  list-style: 24px;
+  font-weight: 100;
+}
+.famous-card img{
+  border-radius: 30px;
+}
+/* Famous card */
