--- a/src/App.css
+++ b/src/App.css
@@ -309,7 +309,7 @@ footer .input-group-text {
   right: 10px;
 }
 
-.product-card .description{
+.product-card .description {
   color: #777777;
   font-size: 14px;
 }
@@ -440,7 +440,7 @@ footer .input-group-text {
   gap: 20px;
 }
 
-.gr-12 .product-card .product-image{
+.gr-12 .product-card .product-image {
   height: auto;
   width: 270px;
 }
@@ -464,7 +464,7 @@ footer .input-group-text {
   width: 100%;
 }
 
-.gr-4 .product-image img{
+.gr-4 .product-image img {
   margin: auto;
   display: block;
 }
@@ -473,3 +473,68 @@ footer .input-group-text {
   width: 24.2%;
 }
 /* Our Store */
+
+/* Contact page */
+.contact-wrapper {
+  padding: 20px;
+  border-radius: 15px;
+  background-color: white;
+  gap: 15px;
+}
+
+.contact-inner-wrapper > div {
+  width: 48%;
+}
+
+.contact-inner-wrapper form .form-control {
+  background-color: var(--color-f5f5f7);
+  border-radius: 10px;
+  border-color: transparent;
+}
+
+.contact-inner-wrapper ul {
+  list-style: none;
+}
+
+.contact-inner-wrapper address,
+.contact-inner-wrapper a,
+.contact-inner-wrapper p {
+  color: #777777;
+}
+/*  Contact page */
+
+/* Compare Product Page*/
+.compare-product-card {
+  padding: 20px 15px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.compare-product-card .cross {
+  top: 10px;
+  right: 10px;
+  width: 20px;
+  cursor: pointer;
+}
+
+.compare-product-details h5.title {
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 500;
+  color: var(--color-1c1c1b);
+}
+
+.compare-product-details h6.price{
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 400;
+}
+
+.compare-product-card .product-detail{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0px;
+  border-top: 1px solid var(--color-f5f5f7);
+}
+/* Compare Product Page*/
