--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,15 @@ a {
 }
 
 /* Header Part */
+.bread-crumb {
+  background-color: var(--color-f5f5f7);
+}
 
+.bread-crumb a {
+  font-size: 15px;
+  font-weight: 600;
+  color: var(--color-3b4149);
+}
 /* Footer Part */
 footer {
   background-color: var(--color-232f3e);
@@ -254,6 +262,23 @@ footer .input-group-text {
   color: var(--color-777777);
   line-height: 22px;
 }
+
+.single-blog-card h3 {
+  font-size: 24px;
+  color: var(--color-1c1c1b);
+  font-weight: 600;
+}
+
+.single-blog-card p {
+  color: var(--color-777777);
+  font-size: 14px;
+}
+
+.single-blog-card a {
+  color: var(--color-777777);
+  font-size: 15px;
+}
+
 /* Blog Card */
 
 /* Product Card */
@@ -549,7 +574,7 @@ footer .input-group-text {
 *:after {
   box-sizing: border-box;
 } */
-.login-card .form-control{
+.login-card .form-control {
   height: 50px;
   background-color: var(--color-f5f5f7);
   color: #777777;
@@ -558,25 +583,39 @@ footer .input-group-text {
   border-color: transparent;
 }
 
-.login-card, .forgot-card {
+.login-card,
+.forgot-card {
   padding: 20px;
   background-color: white;
   width: 500px;
   margin: 30px auto;
-  border-radius: 10px
+  border-radius: 10px;
 }
 
-.login-card h3, .forgot-card h3{
+.login-card h3,
+.forgot-card h3 {
   font-size: 19px;
   font-weight: 500;
 }
 
-
-.login-card a{
+.login-card a {
   font-size: 14px;
   font-weight: 400;
   color: var(--color-3b4149);
 }
 
-
 /* Login Page */
+
+/* Policy Page */
+.policy {
+  background-color: white;
+  padding: 30px;
+}
+/* Policy Page */
+
+/* Single Product */
+.review-head p{
+  font-size: 12px;
+  color: var(--color-777777);
+}
+/* Single Product */
