--- a/src/App.css
+++ b/src/App.css
@@ -613,9 +613,76 @@ footer .input-group-text {
 }
 /* Policy Page */
 
-/* Single Product */
-.review-head p{
+/* Single Product Page */
+.description-wrapper h4,
+.reviews-wrapper h3 {
+  font-size: 26px;
+  color: #1c1c1b;
+  margin-bottom: 15px;
+}
+
+.description-wrapper p {
+  font-size: 14px;
+  color: var(--color-777777);
+}
+
+.review-head p {
   font-size: 12px;
   color: var(--color-777777);
 }
-/* Single Product */
+.review-inner-wrapper {
+  background-color: white;
+  padding: 30px;
+}
+
+.review-head {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 20px;
+}
+
+.review-form h4 {
+  font-size: 16px;
+  color: #777777;
+}
+
+.review p {
+  font-size: 14px;
+  color: var(--color-777777);
+}
+
+.review:not(:last-child) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.main-product-image {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.main-product-image > div {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.main-product-image img{
+  width: 100% !important;
+  height: 500px !important;
+  object-fit: cover;
+}
+.other-product-images{
+  background-color: white;
+  padding: 20px;
+}
+
+.other-product-images > div{
+  padding: 20px;
+  width: 48%;
+  border: 1px solid rgba(0, 0, 0, 0.25)
+}
+
+.main-product-details{
+  padding: 20px;
+  background-color: white;
+
+}
+/* Single Product Page*/
