--- a/src/App.css
+++ b/src/App.css
@@ -433,8 +433,8 @@ footer .input-group-text {
 .colors li {
   width: 20px;
   height: 20px;
-  background-color: green;
   border-radius: 50%;
+  border: 1px solid black;
 }
 
 .random-products h5 {
