open-private-routes
wishlist. profile

--- a/src/App.css
+++ b/src/App.css
@@ -135,6 +135,17 @@ footer .input-group-text {
 
 /* HOME PAGE */
 /* Home Wrapped 1 */
+
+
+h1 {
+  color: white;
+  font-size: 2.25em;
+  text-align: center;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  text-shadow: 0px 2px 0px rgba(0, 0, 0, 1);
+}
+
 .main-banner {
   display: flex;
   flex-wrap: wrap;
@@ -219,6 +230,9 @@ footer .input-group-text {
 .categories {
   padding: 15px;
   background-color: white;
+  box-shadow: 0 0 10px #0000001a;
+}
+.order-item {
   box-shadow: 0 0 10px #0000001a;
 }
 
@@ -783,6 +797,7 @@ footer .input-group-text {
 
 /* Popular Card */
 .popular-card-wrapper {
+  width: 300px !important;
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
   background: rgb(2, 0, 36);
