--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,6 @@ footer .input-group-text {
 /* HOME PAGE */
 /* Home Wrapped 1 */
 
-
 h1 {
   color: white;
   font-size: 2.25em;
@@ -253,9 +252,13 @@ h1 {
   background-color: white;
   padding: 20px;
   border-radius: 10px;
+  overflow: hidden;
+  height: 350px !important;
+  width: 250px !important;
 }
 
 .blog-card img {
+  width: 230px !important;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -304,6 +307,8 @@ h1 {
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
+  max-width: 280px;
+  min-width: 280px;
 }
 .product-card:hover .action-bar {
   right: 10px;
@@ -364,6 +369,7 @@ h1 {
   border-radius: 12px;
   margin: 10px;
 }
+
 /*Special Product Card */
 
 /* Famous card */
