--- a/src/App.css
+++ b/src/App.css
@@ -307,8 +307,7 @@ h1 {
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
-  max-width: 280px;
-  min-width: 280px;
+  width: 190px !important;
 }
 .product-card:hover .action-bar {
   right: 10px;
@@ -332,11 +331,11 @@ h1 {
 
 .product-card h6.brand {
   color: var(--color-bf4800);
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .product-card h5.product-title {
-  font-size: 15px;
+  font-size: 13px;
   color: var(--color-1c1c1b);
 }
 
