--- a/src/App.css
+++ b/src/App.css
@@ -80,10 +80,10 @@ a {
 
 .header-bottom .menu-links a,
 .header-bottom .dropdown button {
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 700;
   color: white;
   line-height: 18px;
-  font-weight: 400;
   letter-spacing: 0.3;
 }
 
@@ -808,7 +808,6 @@ h1 {
     135deg,
     rgb(98, 93, 100) 49%,
     rgba(2, 0, 36, 1) 49%
-  
   );
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.125);
@@ -895,3 +894,25 @@ h1 {
 }
 
 /* Popular Card */
+
+/* Privacy */
+
+.privacy-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.privacy-container h1,
+.privacy-container h2 {
+  color: #333;
+}
+
+.privacy-container p {
+  line-height: 1.6;
+  color: #666;
+}
+
+.privacy-container a {
+  color: #007bff;
+}
