--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,7 @@ h1 {
 .main-banner {
   display: flex;
   flex-wrap: wrap;
+  padding: 5px;
 }
 
 .main-banner-content {
@@ -189,7 +190,6 @@ h1 {
 .small-banner-content h4 {
   font-size: 14px;
   font-weight: 400;
-  line-height: 24px;
   color: var(--color-bf4800);
   margin: 0 0 12px;
   letter-spacing: 0.3px;
@@ -199,21 +199,20 @@ h1 {
 .small-banner-content h5 {
   font-size: 22px;
   font-weight: 500;
-  line-height: 34px;
   letter-spacing: -1px;
   text-transform: none;
 }
 
 .small-banner-content p {
   font-size: 14px;
-  line-height: 28px;
   letter-spacing: 0.4px;
   color: var(--color-131921);
 }
 
 .small-banner {
-  --s: 49%;
-  width: var(--s);
+  padding: 5px;
+  flex-grow: 1;
+  width: 49%;
   transition: 0.2s;
 }
 .small-banner:hover {
